--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true
@@ -14,3 +14,6 @@ spring:
     level:
       org.hibernate.SQL: debug
       org.hibernate.type: trace
+  jackson:
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
