--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   security:
     user:
       name: fooding
-      password: foodingpw
+      password: fooding
       role: USER, ADMIN
   jpa:
     hibernate:
