--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 //	implementation 'mysql:mysql-connector-java'
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
