--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,18 +5,20 @@ spring:
     password:
     driver-class-name: org.h2.Driver
 #    initialization-mode: always
+    sql-script-encoding: UTF-8
   security:
     user:
       name: fooding
       password: fooding
       role: USER
   jpa:
+    generate-ddl: true
     hibernate:
       ddl-auto: create
     show-sql: true
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
     defer-datasource-initialization: true
   logging:
     level:
