--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
 //	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2:1.4.199'
-//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+//	runtimeOnly 'com.h2database:h2:1.4.199'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
