--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/sample_project
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mariadb://13.124.207.219:3306/lgi_test
+      driver-class-name: org.mariadb.jdbc.Driver
+      username: root
+      password: 2022
 #    initialization-mode: always
     sql-script-encoding: UTF-8
   security:
