--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
     url: jdbc:mariadb://13.124.207.219:3306/lgi_test
-      driver-class-name: org.mariadb.jdbc.Driver
-      username: root
-      password: 2022
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: 2022
 #    initialization-mode: always
-    sql-script-encoding: UTF-8
+#   sql-script-encoding: UTF-8
   security:
     user:
       name: fooding
