--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'commons-io:commons-io:2.6'
 
 //	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 //	implementation 'mysql:mysql-connector-java'
-//	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
 	compileOnly 'org.projectlombok:lombok'
 //	runtimeOnly 'com.h2database:h2:1.4.199'
