--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,13 @@ dependencies {
 
 //	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
-//	implementation 'mysql:mysql-connector-java'
-//    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+//	runtimeOnly 'com.h2database:h2:1.4.199'
 
-	runtimeOnly 'com.h2database:h2:1.4.199'
+	implementation 'mysql:mysql-connector-java'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
     compileOnly 'org.projectlombok:lombok'
-//    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
