--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,26 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/sample_project
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://localhost:3306/lgi_test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: 2022
+  #    initialization-mode: always
+  #   sql-script-encoding: UTF-8
   security:
     user:
       name: fooding
       password: fooding
       role: USER
   jpa:
-    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    generate-ddl: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
-        format_sql: true
+        format_sql: false
+  #    defer-datasource-initialization: true
   logging:
     level:
       org.hibernate.SQL: debug
@@ -23,3 +28,7 @@ spring:
   jackson:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
+  server:
+    session:
+      cookie:
+        secure: true
