--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://13.124.207.219:3306/lgi_test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/lgi_test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
     driver-class-name: org.mariadb.jdbc.Driver
     username: root
     password: 2022
@@ -28,7 +28,3 @@ spring:
   jackson:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
-  server:
-    session:
-      cookie:
-        secure: true
