--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'commons-io:commons-io:2.6'
 
-//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
-//	runtimeOnly 'com.h2database:h2:1.4.199'
+	runtimeOnly 'com.h2database:h2:1.4.199'
 
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-	implementation 'mysql:mysql-connector-java'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+//    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+//	implementation 'mysql:mysql-connector-java'
+//    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
