--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,22 @@
-server.servlet.session.cookie.name: HELLO
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/lgi_test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: root
-    password: 2022
-  #    initialization-mode: always
-  #   sql-script-encoding: UTF-8
+    url: jdbc:h2:tcp://localhost/~/sample_project
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
   security:
+#    require-ssl: true
     user:
       name: fooding
       password: fooding
       role: USER
   jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    generate-ddl: true
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      ddl-auto: none
     properties:
       hibernate:
-        format_sql: false
-  #    defer-datasource-initialization: true
+        format_sql: true
+  defer-datasource-initialization: true
   logging:
     level:
       org.hibernate.SQL: debug
