--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,19 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/sample_project
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  security:
-#    require-ssl: true
-    user:
-      name: fooding
-      password: fooding
-      role: USER
+    url: jdbc:mysql://13.124.207.219:3306/lgi_test?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: 2022
+#  security:
+##    require-ssl: true
+#    user:
+#      name: fooding
+#      password: fooding
+#      role: USER
   jpa:
+    database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
